fix preferences: error z-index, select-option-box does not hide after clicking on other locations

--- a/plugin/global/styles/preferences.css
+++ b/plugin/global/styles/preferences.css
@@ -9,7 +9,7 @@
     border-radius: 8px;
     box-shadow: 2px 2px 4px #dbdbdb, -2px -2px 4px #dbdbdb;
     flex-direction: column;
-    z-index: 900;
+    z-index: 9992;
     font-size: 14px;
 }
 
